# hookee

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml  label-commenter-config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.md
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  label-commenter.yml  release-trigger.yml  release.yml  stale.yml  validate.yml
docs/: api.rst  conf.py  index.html  index.rst  requirements.txt
docs/_html/: robots.txt  sitemap-index.xml
docs/_templates/: layout.html  sidebartoc.html  usefullinks.html
hookee/: __init__.py  banner.txt  cli.py  climanager.py  conf.py  config_default.yaml  exception.py  hookee.py  hookeemanager.py  manager.py  pluginmanager.py  server.py  tunnel.py  util.py
hookee/blueprints/: default_blueprint.py
hookee/plugins/: blueprint_default.py  default_request_1_headers.py  default_request_1_info.py  default_request_1_url.py  default_request_2_args.py  default_request_2_headers.py  default_request_3_body.py  default_request_3_query.py  default_request_4_body.py  default_request_4_files.py  default_response_1.py  request_body.py  request_files.py  request_headers.py  request_query_params.py  request_url_info.py  response_echo.py  response_info.py  response_json.py  response_xml.py
hookie/: hookie.py
tests/: managedtestcase.py  test_cli.py  test_cli_manager.py  test_cli_manager_edges.py  test_config.py  test_hookee.py  test_hookee_manager.py  test_hookee_manager_edges.py  test_hookie.py  test_inspection.py  test_manager.py  test_plugin_manager.py  test_util.py  testcase.py
tests/plugins_dir/: custom_plugin.py  custom_request_plugin.py  custom_response_plugin.py  no_blueprint.py  no_plugin_type.py  no_run.py  wrong_args.py
